--- a/styles.css
+++ b/styles.css
@@ -326,9 +326,8 @@ img {
     cursor: pointer;
 }
 
-/* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px) {
-    .modal-content {
-        width: 100%;
+    #caption{
+        font-size: 16px;
     }
 }
